# lcas

./: .env.example  .gitignore  DEPENDENCY_REPORT.md  IMPLEMENTATION_REPORT.md  Makefile  README.md  download_de440.sh  final_validation.py  generate_lightcurves_pytorch.py  pyproject.toml  requirements-updated.txt  requirements.txt  surrogate_data_generator.py  test_ray_tracing.py  validate_orbit_animation.py  validate_pyramid_dumbbell_animation.py  validate_shadow_vectors_animation.py  validate_shadow_vectors_animation_modular.py
.claude/commands/: execute-prp.md  generate-prp.md
context-engineering/: IMPLEMENTATION_TIMELINE.md  README.md
context-engineering/01-surrogate-data-generator/: INITIAL_surrogate_data_generator.md  PRP_surrogate_data_generator.md
context-engineering/02-sample-uniform-sphere/: INITIAL_sample_uniform_sphere.md  PRP_sample_uniform_sphere.md
context-engineering/03-ray-tracing-adaptation/: INITIAL_ray_tracing_adaptation.md  PRP_ray_tracing_adaptation.md
context-engineering/04-data-generation-loop/: INITIAL_data_generation_loop.md  PRP_data_generation_loop.md
context-engineering/05-surrogate-mlp-model/: INITIAL_surrogate_mlp_model.md  PRP_surrogate_mlp_model.md
data/models/: intelsat_901_articulation.yaml  intelsat_901_brdf.yaml  intelsat_901_config.yaml  intelsat_901_model.yaml  pyramid_dumbbell_articulation.yaml  pyramid_dumbbell_brdf.yaml  pyramid_dumbbell_config.yaml  pyramid_dumbbell_model.yaml
data/spice_kernels/missions/dst-is901/: INTELSAT_901-metakernel-v2.tm
lightcurve_results_pytorch/: pytorch_gpu_lightcurve_comparison_10pts.csv  pytorch_gpu_lightcurve_comparison_20pts.csv  pytorch_gpu_lightcurve_comparison_50pts.csv  pytorch_gpu_lightcurve_comparison_5pts.csv  pytorch_gpu_lightcurve_no_shadows_10pts.csv  pytorch_gpu_lightcurve_no_shadows_20pts.csv  pytorch_gpu_lightcurve_no_shadows_50pts.csv  pytorch_gpu_lightcurve_shadowed_10pts.csv  pytorch_gpu_lightcurve_shadowed_300pts.csv  pytorch_gpu_lightcurve_shadowed_50pts.csv  pytorch_gpu_lightcurve_shadowed_5pts.csv
src/articulation/: __init__.py  articulation_engine.py
src/articulation/behaviors/: __init__.py  base_behavior.py  earth_tracking.py  oscillating.py
src/config/: config_schemas.py  model_config.py
src/illumination/: pytorch_shadow_engine.py
src/io/: model_io.py
src/materials/: __init__.py  brdf_manager.py
src/models/: model_definitions.py
src/simulation/: lightcurve_engine.py
src/spice/: spice_handler.py
src/surrogate/: __init__.py  model.py
src/utils/: geometry_utils.py
tests/: test_surrogate_data_generator.py  test_surrogate_model.py
